--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
             </div>
             <div class="md:hidden lg:hidden sm:block">
-                <p class="text-[#3578e5] font-extrabold font-serif -mx-3 mt-[0.6rem]">          Facebook 
+                <p class="text-[#3578e5] font-extrabold font-serif -mx-3 mt-[0.6rem]">          Help
                 </p>
             </div>
         </div>
